--- a/docker/todo-app/front-end/Dockerfile
+++ b/docker/todo-app/front-end/Dockerfile
@@ -1,1 +1,9 @@
-
+FROM node:14-alpine
+WORKDIR /app
+ADD /node_modules.tar.gz ./
+COPY . ./
+RUN npm install
+EXPOSE 3000
+ENV REACT_APP_API_HOST=localhost
+ENV REACT_APP_API_PORT=3001
+ENTRYPOINT [ "npm", "start" ]
